<resources>
    <string name="app_name">EventLocator Organizers</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="are_you">Are you:</string>
    <string name="an_organization">An organization</string>
    <string name="an_individual">An individual</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="proof_picture_hint">Please upload an image to prove that you are eligible to host events, it could be any certificate, or your id or passport if you are an individual.</string>
    <string name="upload">Upload</string>
    <string name="uploaded_image">Uploaded image</string>
    <string name="next">Next</string>
    <string name="about_hint">Tell us about yourself (50 – 500 words)</string>
    <string name="upload_logo_hint">Upload a logo (will be visible on your profile)</string>
    <string name="social_media_sign_up">Social media accounts (optional, can be added later)</string>
    <string name="register">Register</string>
    <string name="facebook_page_name">Facebook page name</string>
    <string name="facebook_page_url">Facebook page URL</string>
    <string name="youtube_channel_name">Youtube channel name</string>
    <string name="youtube_channel_url">Youtube channel URL</string>
    <string name="instagram_page_name">Instagram page name</string>
    <string name="instagram_page_url">Instagram page URL</string>
    <string name="twitter_page_name">Twitter page name</string>
    <string name="twitter_page_url">Twitter page URL</string>
    <string name="upload_profile_picture_hint">Upload a profile picture (will be visible on your profile) (optional)</string>
    <string name="linkedin_profile_name">LinkedIn profile name</string>
    <string name="linkedin_profile_url">LinkedIn profile URL</string>
    <string name="host_an_event">Host an Event</string>
    <string name="followers">Followers</string>
    <string name="my_events">My events</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_you">About you</string>
    <string name="your_email">Your Email (visible to visitors of your profile)</string>
    <string name="your_phone">Your phone number (only visible to you)</string>
    <string name="social_media_accounts">Social media accounts</string>
    <string name="update_logo_hint">Update logo</string>
    <string name="save_changes">Save changes</string>
    <string name="phone_number">Phone number</string>
    <string name="update_profile_picture_hint">Update profile picture</string>
    <string name="new_email">New Email</string>
    <string name="save">Save</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="previous_events">Previous Events</string>
    <string name="canceled_events">Canceled Events</string>
    <string name="update_email">Update email</string>
    <string name="change_password">Change password</string>
    <string name="upload_event_image_hint">Upload an image related to the event (a poster or a logo or similar)</string>
    <string name="event_name">Event name</string>
    <string name="event_description_at_least_100_words">Event description (at least 100 words)</string>
    <string name="event_categories_select_all_that_apply">Event categories (select all that apply)</string>
    <string name="date_s">Date(s)</string>
    <string name="select_date">Select date</string>
    <string name="start_date">Selected start date:</string>
    <string name="end_date">Selected end date:</string>
    <string name="event_type">Event type</string>
    <string name="online">Online</string>
    <string name="located">Located</string>
    <string name="sessions">Sessions</string>
    <string name="city">City</string>
    <string name="select">Select</string>
    <string name="select_location_hint">Select the exact location of the event</string>
    <string name="select_a_location">Select a location</string>
    <string name="select_registration_close_hint">Select the date and time when registration closes (optional, registration closes when the event starts by default)</string>
    <string name="time">Time</string>
    <string name="selected_date">Selected date:</string>
    <string name="date">Date</string>
    <string name="select_time">Select Time</string>
    <string name="selected_time">Selected time:</string>
    <string name="create_event">Create event</string>
    <string name="number_of_participants_hint">Max number of participants (optional)</string>
    <string name="whatsapp_group_link_hint">WhatsApp group link (optional)</string>
    <string name="email_cant_be_empty_error">Email can\'t be empty</string>
    <string name="invalid_email_error">Invalid Email address</string>
    <string name="password_cant_be_empty_error">Password can\'t be empty</string>
    <string name="name_cant_be_empty_error">Name can\'t be empty</string>
    <string name="org_name_max_length_error">Name length should be less than 33 characters</string>
    <string name="phone_number_cant_be_empty_error">Phone number can\'t be empty</string>
    <string name="invalid_phone_error">Please enter a valid phone number</string>
    <string name="passwords_dont_match_error">Passwords don\'t match</string>
    <string name="password_length_error">Passwords must be within 8 – 16 characters</string>
    <string name="passwords_contents_error">Passwords must contain at least one letter and one number</string>
    <string name="remove_image">Remove image</string>
    <string name="name_contains_numbers_error">Name can\'t contain numbers</string>
    <string name="field_cant_be_empty_error">This field can\'t be empty</string>
    <string name="about_limit_error">50 – 500 words are allowed</string>
    <string name="max_number_of_characters_error">Max number of characters reached (65535)</string>
    <string name="social_media_name_error">Account name can\'t be empty when URL is provided</string>
    <string name="account_name_max_characters_error">Account name should be less than 33 characters</string>
    <string name="URL_not_valid_error">URL is not valid</string>
    <string name="select_an_image">Select an image</string>
    <string name="date_error">Date error</string>
    <string name="date_period_error_text">Date period must be less than 8 days</string>
    <string name="select_start_end_dates">Select start and end dates (max 7 days)</string>
    <string name="ok">OK</string>
    <string name="event_name_length_error">Name length should be less than 129 characters</string>
    <string name="event_description_min_length_error">At least 100 words are required</string>
    <string name="number_of_participants_limit_error">Number of participants must be a positive value that is less than 1001</string>
    <string name="event_category_error">At least one category is required</string>
    <string name="educational">Educational</string>
    <string name="entertainment">Entertainment</string>
    <string name="volunteering">Volunteering</string>
    <string name="sports">Sports</string>
    <string name="select_start_time">Start time</string>
    <string name="select_end_time">End time</string>
    <string name="select_check_in_time">Check-in time</string>
    <string name="session_time_limit_error">Session time can\'t be more than 12 hours</string>
    <string name="time_error">Time error</string>
    <string name="check_in_time_limit_error">Check-in time must be at most 3 hours before the start of the session</string>
    <string name="end_time_before_start_time_error">End time must occur after start time</string>
    <string name="check_in_time_before_start_time_error">Check-in time must be before the start time</string>
    <string name="date_s2">Date(s):</string>
    <string name="status">Status:</string>
    <string name="description">Description</string>
    <string name="max_participants">Max participants:</string>
    <string name="current_number_of_participants">Current number of participants:</string>
    <string name="city2">City:</string>
    <string name="location2">Location:</string>
    <string name="tap_to_view_location">Tap to view location</string>
    <string name="registration_closes_on">Registration closes on:</string>
    <string name="categories">Categories</string>
    <string name="canceled_on">Canceled on:</string>
    <string name="cancellation_reason">Cancellation reason</string>
    <string name="wrong_email_and_or_password_error">Wrong email and/or password</string>
    <string name="email_title">Email title</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>
    <string name="title_length_error">Title length should be less than 64 characters</string>
    <string name="confirm">Confirm</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="event_categories">Event categories</string>
    <string name="select_a_date_or_a_date_period">Select a date or a date period</string>
    <string name="remove_selected_dates">Remove selected dates</string>
    <string name="apply">Apply</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="Amman">Amman</string>
    <string name="Zarqa">Al-Zarqa</string>
    <string name="Balqa">Al-Balqa</string>
    <string name="Madaba">Madaba</string>
    <string name="Irbid">Irbid</string>
    <string name="Mafraq">Al-Mafraq</string>
    <string name="Jerash">Jerash</string>
    <string name="Ajloun">Ajloun</string>
    <string name="Karak">Al-Karak</string>
    <string name="Aqaba">Al-Aqaba</string>
    <string name="Maan">Ma\'an</string>
    <string name="Tafila">Al-Tafila</string>
    <string name="no_date_error">Please select start and end date for the event</string>
    <string name="session_times_error">Please select start and end time for each session</string>
    <string name="select_registration_close_date">Select registration close date</string>
    <string name="registration_close_time_error">Registration must close at most 48 hours before the event starts (selected date and time are more than 48 hours)</string>
    <string name="city_and_location_warning">City and location are only available for located events</string>
    <string name="pending">Pending</string>
    <string name="registration_ongoing">Registration ongoing</string>
    <string name="registration_closed">Registration closed</string>
    <string name="session_happening_right_now">A session is happening right now!</string>
    <string name="active">Active</string>
    <string name="no_limit">No limit</string>
    <string name="whatsapp_group">WhatsApp group</string>
    <string name="pending_account_error">Your account is still pending, you will get an email when an admin accepts or rejects your account</string>
    <string name="rejected_account_error">Your account has been reject by an admin, please contact us for more information</string>
    <string name="suspended_account_error">Your account has been suspended due to its rating going below 3 stars</string>
    <string name="check_in_participant">Check-in participant</string>
    <string name="scan_a_participant">Scan a participant</string>
    <string name="total_number_of_registered_participants">Total number of registered participants:</string>
    <string name="average_attendance_rate_for_the_selected_sessions">Average attendance rate (for the selected sessions):</string>
    <string name="average_arrival_time_for_the_selected_sessions">Average arrival time (for the selected sessions):</string>
    <string name="total_participants">Total participants:</string>
    <string name="average_arrival_time">Average arrival time:</string>
</resources>