<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrganizationUpdateProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/et_start_end_margin"
            android:layout_marginEnd="@dimen/et_start_end_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/btnUpdateEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_size"
                android:text="@string/update_email"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_size"
                android:text="@string/change_password"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlAbout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAbout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/about_you"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlUpdatePhone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUpdatePhone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_logo_hint"
                android:textSize="@dimen/larger_label"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <Button
                    android:id="@+id/btnUploadLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/tvUploadedImageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploaded_image"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_media_accounts"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlFacebookName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFacebookName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/facebook_page_name"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlFacebookURL"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFacebookURL"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/facebook_page_url"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlYoutubeName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYoutubeName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/youtube_channel_name"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlYoutubeURL"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYoutubeURL"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/youtube_channel_url"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlInstagramName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInstagramName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/instagram_page_name"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlInstagramURL"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInstagramURL"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/instagram_page_url"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlTwitterName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTwitterName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/twitter_page_name"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlTwitterURL"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTwitterURL"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/twitter_page_url"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/save_changes"
                android:textSize="@dimen/button_size"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>