<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/et_start_end_margin"
            android:layout_marginEnd="@dimen/et_start_end_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you"
                android:textSize="@dimen/larger_label"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <RadioButton
                    android:id="@+id/rbOrganization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an_organization"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/rbIndividual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/an_individual"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlConfirmPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPhoneNumber"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proof_picture_hint"
                android:textSize="@dimen/larger_label"/>

            <Button
                android:id="@+id/btnUploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_marginBottom="8dp"
                android:textSize="@dimen/button_size"/>

            <ImageView
                android:id="@+id/ivImagePreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btnRemoveImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_image"
                android:layout_marginBottom="16dp"
                android:textSize="@dimen/button_size"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="@dimen/button_size"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>