<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/et_start_end_margin"
            android:layout_marginStart="@dimen/et_start_end_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEventName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEventName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/event_name"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEventDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEventDescription"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/event_description_at_least_100_words"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/larger_label"
                android:text="@string/event_categories_select_all_that_apply"/>

            <!-- TODO: add check boxes for categories -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_event_image_hint"
                android:textSize="@dimen/larger_label"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <Button
                    android:id="@+id/btnUploadEventImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/tvUploadedImageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploaded_image"/>
            </LinearLayout>








        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>